# TiRenderer

./: CMakeLists.txt  README.md
3rd/: .gitignore  download.txt
docs/: build_option_macro.txt
include/: TiEngine.h
include/application/: Application.h
include/backend/: BackendApi.h  BackendContext.h  BasicTypes.h  CommandAllocator.h  CommandList.h  CommandRecorder.h  Descriptor.h  DescriptorGroup.h  DescriptorHeap.h  DescriptorTable.h  Device.h  ImageSampler.h  InputIndex.h  InputIndexAttribute.h  InputVertex.h  InputVertexAttributes.h  PipelineLayout.h  PipelineState.h  ResourceBuffer.h  ResourceImage.h  ResourceImageSampler.h  Shader.h  (+1 more)
source/: CMakeLists.txt
source/application/appdemo/: AppDemo.cpp  CMakeLists.txt  Demo_01_Backend.cpp  Demo_02_Passflow.cpp  DemosBaseHeader.h  WinMsgProc.cpp
source/backend/: BackendContext.cpp  CMakeLists.txt
source/backend/cpu/: CMakeLists.txt
source/backend/dx12/: CMakeLists.txt  DX12BackendHeaders.h  DX12BackendModule.cpp  DX12BaseObject.h  DX12BasicTypes.cpp  DX12BasicTypes.h  DX12CommandAllocator.cpp  DX12CommandAllocator.h  DX12CommandList.cpp  DX12CommandList.h  DX12CommandRecorder.cpp  DX12CommandRecorder.h  DX12Common.cpp  DX12Common.h  DX12Context.cpp  DX12Context.h  DX12Descriptor.cpp  DX12Descriptor.h  DX12DescriptorGroup.cpp  DX12DescriptorGroup.h  DX12DescriptorHeap.cpp  DX12DescriptorHeap.h  DX12Device.cpp  DX12Device.h  DX12ImageSampler.cpp  DX12ImageSampler.h  DX12InputIndex.cpp  DX12InputIndex.h  DX12InputIndexAttribute.cpp  DX12InputIndexAttribute.h  DX12InputVertex.cpp  DX12InputVertex.h  DX12InputVertexAttributes.cpp  DX12InputVertexAttributes.h  DX12PipelineLayout.cpp  DX12PipelineLayout.h  DX12PipelineState.cpp  DX12PipelineState.h  DX12ResourceBuffer.cpp  DX12ResourceBuffer.h  (+6 more)
source/backend/vulkan/: CMakeLists.txt
(+51 files in other folders)
